# semantic-chunking

./: .gitignore  README.md  chunkAnalyser.py  cli.py  demo.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_chunker.py  setup.py
.github/workflows/: publish.yml
chunkenv/: pyvenv.cfg
integrations/: langchain.py
output/: chunks.txt  document_analysis.json  visualization_data.json
output/atomic/: atomic_chunks.txt
output/hierarchical/: hierarchical_chunks.txt
output/semantic/: semantic_relationships.txt
semantic_chunker/: __init__.py  core.py  visualization.py
